<resources>
    <string name="app_name">Épicerie</string>
    <string name="title_shop">Produits</string>
    <string name="title_cart">Panier</string>
    <string name="text_total_price">Prix total</string>
    <string name="action_edit">Éditer</string>
    <string name="action_delete">Supprimer</string>
    <string name="total_price">Total: %1$.2f$</string>
    <string name="cart_product_quantity">Quantité: %1$d</string>
    <string name="menu_option_admin">Admin</string>
    <string name="admin_mode_activated">Mode admin activé</string>
    <string name="admin_mode_deactivated">Mode admin désactivé</string>
    <string name="save">Sauvegarder</string>
    <string name="item_quantity">Quantité</string>
    <string name="item_category">Catégorie\n</string>
    <string name="item_price">Prix</string>
    <string name="item_description">Description du produit</string>
    <string name="item_name">Nom du produit</string>
    <string name="dialog_new_item">Nouveau produit</string>
    <string name="dialog_edit_item">Modification produit</string>
    <string name="dialog_save">Sauvegarder</string>
    <string name="dialog_cancel">Annuler</string>
</resources>