<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_description"
        app:layout_constraintTop_toBottomOf="@id/etItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etItemDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etItemCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_category"
        app:layout_constraintTop_toBottomOf="@id/etItemPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_quantity"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etItemCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
